[package]
name = "kvstore-binary"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

kvstore-api = { path = "../api" }

# Serialization
serde = "1.0"
bincode ="1.3"

[dev-dependencies]

kvstore-inmemory = { path = "../inmemory" }

tokio = { version ="1.0", features = ["full"] }